syntax = "proto3";

package bunmart.cart.v1;

option java_package = "com.nsbm.bunmart.cart.v1";
option java_multiple_files = true;

// CartService â€” carts and checkout. Product Catalog calls AddCartItem when frontend adds to cart; Cart calls Order.CreateOrderIntent; Order calls InvalidateCart after order placed.
service CartService {
  rpc GetCart(GetCartRequest) returns (GetCartResponse);
  rpc AddCartItem(AddCartItemRequest) returns (AddCartItemResponse);
  rpc InvalidateCart(InvalidateCartRequest) returns (InvalidateCartResponse);
}

message CartItemInfo {
  string cart_item_id = 1;
  string product_id = 2;
  int32 quantity = 3;
}

message CartInfo {
  string cart_id = 1;
  string user_id = 2;
  repeated CartItemInfo items = 3;
  string total = 4;
}

message GetCartRequest {
  string user_id = 1;
}

message GetCartResponse {
  CartInfo cart = 1;
}

// Product Catalog calls this when frontend requests add-to-cart (frontend does not call Cart directly).
message AddCartItemRequest {
  string user_id = 1;
  string product_id = 2;
  int32 quantity = 3;
}

message AddCartItemResponse {
  string cart_id = 1;
  CartInfo cart = 2; // updated cart after add
}

message InvalidateCartRequest {
  string user_id = 1;
  repeated string product_ids = 3;
}

message InvalidateCartResponse {
  bool invalidated = 1;
}
